--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,11 @@
     <string name="AD_MOB_IDENTIFIER">ca-app-pub-4174611198988161~1710035679</string>
 
     <string name="MainScreenBanner">ca-app-pub-4174611198988161/6172874928</string>
+    <string name="MainScreenBannerTEST">ca-app-pub-3940256099942544/6300978111</string>
     <string name="RewardedVideo">ca-app-pub-4174611198988161/7131142499</string>
+    <string name="RewardedVideoTEST">ca-app-pub-3940256099942544/1033173712</string>
     <string name="BlockBetweenActivities">ca-app-pub-4174611198988161/6057324853</string>
+    <string name="BlockBetweenActivitiesTEST">ca-app-pub-3940256099942544/5224354917</string>
 
 
     <string name="test_text">Томми Версетти взял под контроль преступный мир Вайс-Сити, что сильно раздражает Сонни Форелли. После неудачной попытки насильственно взять налог с деловых предприятий Томми, Сонни приезжает в город, чтобы лично встретиться с Томми. Предупреждённый о приезде Сонни, Томми готовит 3 миллиона долларов поддельных наличных в надежде откупиться ими.\\n\" +                 \"Однако, когда Сонни, наконец, приходит, коварный Лэнс Вэнс открыто предает Томми, ссылаясь на «бизнес», как свою мотивацию. В то же время, Томми также не оправился от осознания того, что 15 лет он провел в тюрьме Форелли из-за спланированной засады.\\n\" +                 \"Эти откровения ускоряют перестрелку в особняке Версетти. Во-первых, Томми убивает Лэнса на крыше особняка, затем идет на убийство Сонни у начала лестницы в фойе вместе с его охранниками. Томми также предположительно ранен во время перестрелки, в конце ролика, Розенберг сетует, что Томми испортил свой костюм (правда, ни крови, ни каких-либо повреждений не видно). После этого Томми и Кен обсуждают свои планы на будущее и празднуют победу.</string>
